# nerfies

./: eval.py  pyproject.toml  setup.py  train.py
nerfies/: camera.py  configs.py  evaluation.py  glo.py  gpath.py  image_utils.py  model_utils.py  models.py  modules.py  quaternion.py  schedules.py  training.py  utils.py  visualization.py  warping.py
nerfies/datasets/: __init__.py  core.py  nerfies.py
