[tool.poetry]
name = "nerfies"
version = "0.1.0"
description = "Nerfies"
authors = ["Brendan Duke <brendanw.duke@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
absl-py = "^0.11.0"
flax = "^0.3.0"
frozendict = "^1.2"
gast = "^0.3.3"
gin-config = "^0.4.0"
imageio = "^2.9.0"
matplotlib = "^3.3.3"
numpy = "^1.19.5"
opencv-python = "^4.5.1.48"
Pillow = "^8.1.0"
scipy = "^1.6.0"
tensorboard = "^2.4.1"
tensorflow = "^2.4.0"
tensorflow-hub = "^0.11.0"
tqdm = "^4.56.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
